--- a/HTML/tng/05_1_tng1.html
+++ b/HTML/tng/05_1_tng1.html
@@ -13,44 +13,46 @@
             <ul>
                 <li>
                     <label for="id">아이디</label>
-                    <input type="text" id="id" placeholder="4자 ~ 10자 사이, 공백없이">
+                    <input type="text" name="id" id="id" placeholder="4자 ~ 10자 사이, 공백없이" required minlength="4" maxlength="10">
                 </li>
                 <li>
                     <label for="email">이메일</label>
-                    <input type="email" id="email">
+                    <input type="email" name="email" id="email" required>
                 </li>
                 <li>
                     <label for="pw">비밀번호</label>
-                    <input type="password" id="pw" placeholder="문자와 숫자, 특수 기호 포함">
+                    <input type="password" name="pw" id="pw" placeholder="문자와 숫자, 특수 기호 포함" required>
                 </li>
                 <li>
-                    <label for="pwcheck">비밀번호 확인</label>
-                    <input type="password" id="pwcheck">
+                    <label for="pwCheck">비밀번호 확인</label>
+                    <input type="password" name="pwCheck" id="pwCheck" required>
                 </li>
                 <li>
                     <label for="roote">가입 경로</label>
-                    <select id="roote">
+                    <select name="roote" id="roote">
                         <option value="0">기타</option>
-                        <option value="1">블로그</option>
+                        <option value="1">친구추천</option>
+                        <option value="2">검색</option>
                     </select>
                 </li>
                 <li>
                     <label for="memo">메모</label>
-                    <textarea id="memo" cols="30" rows="10" placeholder="남길 말씀이 있다면 여기에"></textarea>
+                    <textarea name="memo" id="memo" cols="30" rows="10" placeholder="남길 말씀이 있다면 여기에"></textarea>
                 </li>
             </ul>
         </fieldset>
 
         <fieldset>
             <legend>이벤트와 새로운 소식</legend>
-            <input type="radio" name="mail" id="yes">
+            <input type="radio" name="event" id="yes">
             <label for="yes">메일 수신</label>
-            <input type="radio" name="mail" id="no" checked>
+            <input type="radio" name="event" id="no" checked>
             <label for="no">메일 수신 안 함</label>
         </fieldset>
 
         <button type="submit">가입하기</button>
         <button type="reset">취소</button>
+        <!-- <a href="./04_3_tng3.html"><button type="button">취소</button></a> -->
     </form>
 </body>
 </html>
