240823 고급 선택자

--- a/CSS/Ex/09_2_backImg.html
+++ b/CSS/Ex/09_2_backImg.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="div-img"></div>
+    <div class="div-img">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, sequi voluptatum recusandae molestias totam, eum vero atque minima beatae quae veritatis, nisi reprehenderit cumque impedit. Voluptas modi sint architecto doloribus.</p>
+    </div>
 
     <div class="div-repeat"></div>
 </body>
