--- a/PRACTICE/practice2.html
+++ b/PRACTICE/practice2.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="start-page_background">
-        <a href="practice1.html"><button class="start-page_btn">OPEN</button></a>
+        <a href="practice1.html"><button>OPEN</button></a>
+        
         <div class="left-side"></div>
         <div class="right-side"></div>
     </div>
