241031 javascript 이벤트 풀이

--- a/JavaScript/Tng/40.html
+++ b/JavaScript/Tng/40.html
@@ -8,7 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="btn_find" type="button">버튼</button>
-    <div id="box" class="box-hidden color-transparent"></div>
+    <!-- <button id="btn_find" type="button">버튼</button>
+    <div id="box" class="box-hidden color-transparent"></div> -->
+
+    <button type="button" id="btn-info">버튼</button>
+
+    <div class="container">
+        <div class="box"></div>
+    </div>
 </body>
 </html>
