241101 javascript 시계 풀이

--- a/JavaScript/Tng/41.html
+++ b/JavaScript/Tng/41.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <p>현재 시간 </p>
+    <!-- <p>현재 시간 </p>
     <button id="btn_stop" type="button">멈춰</button>
-    <button id="btn_restart" type="button">재시작</button>
+    <button id="btn_restart" type="button">재시작</button> -->
+    <p>현재 시간 <span id="time"></span></p>
+    <button id="btn-stop">멈춰</button>
+    <button id="btn-restart">재시작</button>
 </body>
 </html>
